fix: add typings as output of build and much more

--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "@scaljeri/fbp-ui",
   "version": "1.0.0",
+  "types": "dist/types/index.d.ts",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --output-hashing=none --extra-webpack-config ./webpack.extra.js --single-bundle",
+    "build": "yarn build:components && yarn build:types",
+    "build:components": "ng build --output-hashing=none --extra-webpack-config ./webpack.extra.js --single-bundle",
+    "build:types": "tsc -p tsconfig.types.json",
     "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc",
+    "publish": "npm publish --access public",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
     "@angular/common": "~9.1.9",
@@ -34,10 +40,17 @@
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~9.1.9",
     "@angular/compiler-cli": "~9.1.9",
+    "@babel/core": "^7.10.4",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addon-notes": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/angular": "^5.3.19",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^26.0.0",
     "@types/node": "^12.11.1",
+    "babel-loader": "^8.1.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
