--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "enableIvy": true,
+    "allowEmptyCodegenFiles": true
   }
 }
