--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,21 @@
-# Editor configuration, see https://editorconfig.org
+# EditorConfig helps developers define and maintain consistent
+# coding styles between different editors and IDEs
+# editorconfig.org
+
 root = true
 
+
 [*]
+end_of_line = lf
 charset = utf-8
-indent_style = space
-indent_size = 2
-insert_final_newline = true
 trim_trailing_whitespace = true
+insert_final_newline = true
+indent_style = space
+indent_size = 4
 
-[*.ts]
-quote_type = single
+[*.txt]
+indent_style = tab
+indent_size = 4
 
-[*.md]
-max_line_length = off
+[*.{diff,md}]
 trim_trailing_whitespace = false
