--- a/package.json
+++ b/package.json
@@ -18,52 +18,52 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@angular/animations": "~10.0.0",
-    "@angular/common": "~10.0.0",
-    "@angular/compiler": "~10.0.0",
-    "@angular/core": "~10.0.0",
-    "@angular/elements": "^9.1.9",
-    "@angular/forms": "~10.0.0",
-    "@angular/platform-browser": "~10.0.0",
-    "@angular/platform-browser-dynamic": "~10.0.0",
-    "@angular/router": "~10.0.0",
+    "@angular/animations": "~11.0.2",
+    "@angular/common": "~11.0.2",
+    "@angular/compiler": "~11.0.2",
+    "@angular/core": "~11.0.2",
+    "@angular/elements": "^11.0.2",
+    "@angular/forms": "~11.0.2",
+    "@angular/platform-browser": "~11.0.2",
+    "@angular/platform-browser-dynamic": "~11.0.2",
+    "@angular/router": "~11.0.2",
     "@ngxs-labs/dispatch-decorator": "^2.1.0",
     "@ngxs/devtools-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
-    "@scaljeri/fbp-core": "1.0.0",
+    "@scaljeri/fbp-core": "^1.0.24",
     "rxjs": "6.5.5",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/jest": "^10.0.0",
-    "@angular-devkit/build-angular": "~0.1000.6",
-    "@angular/cli": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.0",
+    "@angular-devkit/build-angular": "~0.1100.2",
+    "@angular/cli": "~11.0.2",
+    "@angular/compiler-cli": "~11.0.2",
     "@babel/core": "^7.10.4",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addon-notes": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/angular": "^5.3.19",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^26.0.0",
     "@types/node": "^12.11.1",
     "babel-loader": "^8.1.0",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "jest": "^26.0.1",
-    "karma": "~5.0.0",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "ngx-build-plus": "^9.0.6",
     "protractor": "~7.0.0",
     "ts-node": "8.6.2",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.2"
+    "typescript": "~4.0.5"
   }
 }
